Fix text overflowing in goosemod store, fix bug with tooltips

--- a/src/_constants.scss
+++ b/src/_constants.scss
@@ -1,3 +1,3 @@
 // CONSTANTS
-$version: "Pixelcord v3.0.5";
+$version: "Pixelcord v3.0.6";
 
